// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="default"
  id="default"
/>
`;

exports[`Render properties.html - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html"
  id="properties.html"
>
  <div
    style="background: green; padding: 10px;"
  >
    Content green background
  </div>
  

</div>
`;

exports[`Render properties.html is boolean false - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html is boolean false"
  id="properties.html is boolean false"
>
  false
</div>
`;

exports[`Render properties.html is number 0 - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html is number 0"
  id="properties.html is number 0"
>
  0
</div>
`;

exports[`Render properties.html-bad-code - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html-bad-code"
  id="properties.html-bad-code"
>
  <h1>
    Link
  </h1>
  <h1>
    


    <a
      href="https://lowdefy.com"
    >
      Lowdefy link
    </a>
    


    <font
      size="+10"
    >
      Description
    </font>
    


  </h1>
  <h1>
    Bad HTML
  </h1>
  


  <div>
    
  
    <a>
      delta
    </a>
    
  
    <img
      src="x"
    />
    
  
  
    <math>
      
    
      <mi />
      
  
    </math>
    

  </div>
  


</div>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html-iframe"
  id="properties.html-iframe"
>
  An iframe:


</div>
`;

exports[`Render properties.html-styled - value[0] 1`] = `
.emotion-0 {
  background: yellow;
  padding: 10px;
}

<div
  class="emotion-0"
  data-testid="properties.html-styled"
  id="properties.html-styled"
>
  <div
    style="background: green; padding: 10px;"
  >
    Content green background and properties.style yellow background
  </div>
  

</div>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  background: yellow;
  padding: 10px;
}

<div
  class="emotion-0"
  data-testid="properties.style"
  id="properties.style"
>
  <div>
    properties.style yellow background
  </div>
  

</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="default"
  id="default"
/>
`;

exports[`Render required = true properties.html - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html"
  id="properties.html"
>
  <div
    style="background: green; padding: 10px;"
  >
    Content green background
  </div>
  

</div>
`;

exports[`Render required = true properties.html is boolean false - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html is boolean false"
  id="properties.html is boolean false"
>
  false
</div>
`;

exports[`Render required = true properties.html is number 0 - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html is number 0"
  id="properties.html is number 0"
>
  0
</div>
`;

exports[`Render required = true properties.html-bad-code - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html-bad-code"
  id="properties.html-bad-code"
>
  <h1>
    Link
  </h1>
  <h1>
    


    <a
      href="https://lowdefy.com"
    >
      Lowdefy link
    </a>
    


    <font
      size="+10"
    >
      Description
    </font>
    


  </h1>
  <h1>
    Bad HTML
  </h1>
  


  <div>
    
  
    <a>
      delta
    </a>
    
  
    <img
      src="x"
    />
    
  
  
    <math>
      
    
      <mi />
      
  
    </math>
    

  </div>
  


</div>
`;

exports[`Render required = true properties.html-iframe - value[0] 1`] = `
<div
  class="emotion-0"
  data-testid="properties.html-iframe"
  id="properties.html-iframe"
>
  An iframe:


</div>
`;

exports[`Render required = true properties.html-styled - value[0] 1`] = `
.emotion-0 {
  background: yellow;
  padding: 10px;
}

<div
  class="emotion-0"
  data-testid="properties.html-styled"
  id="properties.html-styled"
>
  <div
    style="background: green; padding: 10px;"
  >
    Content green background and properties.style yellow background
  </div>
  

</div>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  background: yellow;
  padding: 10px;
}

<div
  class="emotion-0"
  data-testid="properties.style"
  id="properties.style"
>
  <div>
    properties.style yellow background
  </div>
  

</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.html 1`] = `true`;

exports[`Test Schema properties.html 2`] = `null`;

exports[`Test Schema properties.html is boolean false 1`] = `true`;

exports[`Test Schema properties.html is boolean false 2`] = `null`;

exports[`Test Schema properties.html is number 0 1`] = `true`;

exports[`Test Schema properties.html is number 0 2`] = `null`;

exports[`Test Schema properties.html-bad-code 1`] = `true`;

exports[`Test Schema properties.html-bad-code 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.html-styled 1`] = `true`;

exports[`Test Schema properties.html-styled 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`update on properties.html change 1`] = `
<div
  class="emotion-0"
  data-testid="update"
  id="update"
>
  <div>
    one
  </div>
</div>
`;

exports[`update on properties.html change 2`] = `
<div
  class="emotion-0"
  data-testid="update"
  id="update"
>
  <div>
    two
  </div>
</div>
`;
